Adding TYC GIS, and 2 games

--- a/game/index.html
+++ b/game/index.html
@@ -65,7 +65,7 @@
                     <a
                        class="navbar-brand js-scroll-trigger"
                        href="#page-top"
-                    >GeoNight <span class="subtitle">by AGE</span></a>
+                    >Terra Incógnita <span class="subtitle">by AGE & GeoDevelopers</span></a>
                     <button
                        class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded"
                        type="button"
@@ -155,7 +155,6 @@
                             </p>
                             <h2>Dinámica de funcionamiento</h2>
                             <ul>
-                                <li>Cada equipo partirá de 100.000 puntos</li>
                                 <li>
                                     Al introducir el nombre del equipo (tras identificarse) empezará a correr el tiempo.
                                 </li>
@@ -183,7 +182,7 @@
                                 <button
                                    id="qsLoginBtn"
                                    onclick="login()"
-                                   class="btn btn-primary btn-margin auth-invisible hidden"
+                                   class="btn btn-primary btn-margin auth-invisible btn-block hidden"
                                 >
                                     Empezar
                                 </button>
