--- a/index.html
+++ b/index.html
@@ -360,7 +360,8 @@
             <p>
                 Las/os profesionales en Geografía están capacitados/as para mucho más, como: saber cómo <a
                    href="https://es.wikipedia.org/wiki/Planificaci%C3%B3n_Territorial"
-                >ordenar el territorio</a>,
+                >ordenar el territorio</a>, combatir el cambio climático y sus consecuencias, luchar contra los riesgos
+                naturales y tecnológicos,
                 <a href="https://es.wikipedia.org/wiki/Geomarketing">diseñar estrategias de geomarketing</a>, utilizar
                 herramientas
                 de <a href="https://es.wikipedia.org/wiki/Teledetecci%C3%B3n">teledetección</a> de última generación,
@@ -1101,6 +1102,30 @@
                             </div>
                         </div>
                     </div>
+                    <div class="sponsor-grid__item">
+                        <div class="sponsor-grid__logo">
+                            <div class="sponsor-grid__logo__center">
+                                <img
+                                   src="assets/imgs/logo-tycgis.png"
+                                   alt="Logo TYC GIS"
+                                >
+                            </div>
+                        </div>
+                        <div class="sponsor-grid__expander">
+                            <div class="sponsor-grid__description">
+                                <h4>TYC GIS</h4>
+                                <p>
+                                    <a href="https://tycgis.com/">TYC GIS</a> surge para dar respuesta a las necesidades
+                                    formativas y de asesoramiento de empresas y particulares en programas especializados
+                                    de GIS, Teledetección y Drones.
+
+                                    Nuestros años de experiencia nos permiten ofrecer capacitaciones de calidad,
+                                    adaptadas a las necesidades del alumno y a la realidad del sector.
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -1346,7 +1371,28 @@
                 language: 'Inglés',
                 type: 'Web',
                 img: 'assets/imgs/mappuzle.gif'
+            },
+            {
+
+                title: 'IDE Explora',
+                description: 'Elige una comarca del mapa extremeño y explórala a través de imágenes y audios',
+                url: 'http://www.ideex.es/idedidactica/ideexplora/index.html',
+                author: 'IDE de Extremadura',
+                language: 'Español',
+                type: 'Web',
+                img: 'assets/imgs/ideex-explora.gif'
+            },
+            {
+
+                title: 'Geo Oca',
+                description: 'Responde acertadamante las preguntas y mueve tu ficha. Juega en modo individual o multijugador',
+                url: 'https://idearagon.aragon.es/geojuegos/htm/es/geo-oca.html',
+                author: 'IDE de Aragón',
+                language: 'Español',
+                type: 'Web',
+                img: 'assets/imgs/igear-geo-oca.gif'
             }
+
         ];
 
         function shuffle(array) {
