Reviewed clues (images)

--- a/game/index.html
+++ b/game/index.html
@@ -149,32 +149,41 @@
                             <h1>Instrucciones:</h1>
                             <h2>Objetivo del juego</h2>
                             <p>
-                                El juego consiste en adivinar las ubicaciones en el menor tiempo posible cometiendo el
-                                menor error (distancia) posible. Antes de terminar habrá una última pregunta que
-                                ponderará la puntuación final.
+                                El juego consiste en adivinar y situar en un mapa la localización de 5 lugares ocultos
+                                en el menor tiempo posible.
+
                             </p>
                             <h2>Dinámica de funcionamiento</h2>
                             <ul>
                                 <li>
-                                    Al introducir el nombre del equipo (tras identificarse) empezará a correr el tiempo.
+                                    Se debe nombrar un/una portavoz y dar un nombre al equipo. Cuando el/la portavoz
+                                    registre el nombre del equipo empezará a correr el tiempo.
                                 </li>
                                 <li>
-                                    Por cada ubicación se darán una serie de pistas (el número de pistas no es el mismo
-                                    para todas las ubicaciones)
+                                    Se darán una serie de pistas audiovisuales para cada lugar oculto. Cuando el grupo
+                                    resuelva la ubicación, el/la portavoz debe ubicarla en el mapa.
                                 </li>
-                                <li>No hace falta ver todas las pistas</li>
-                                <li>Cuando hagas clic en el mapa se enviará automáticamente (cuidado), y no se pueden
-                                    enviar dos veces</li>
-                                <li>Una vez respondida una ubicación no se podrá volver a intentar</li>
+                                <li>
+                                    Cuando el/la portavoz haga clic en el mapa se enviará automáticamente la respuesta
+                                    (¡atención!). Una vez resuelta una ubicación no se podrá volver a intentar.
+                                </li>
+                                <li>
+                                    Antes de terminar el juego habrá una última pregunta relativa al conjunto de
+                                    localizaciones.
+                                </li>
+                                <li>
+                                    La puntuación se calcula en razón del error acumulado, que aumenta según pasa el
+                                    tiempo de resolución y es proporcional al error de localización (distancia desde la
+                                    respuesta pinchada en el mapa hasta el punto de localización correcto) . Las
+                                    puntuaciones más altas son indicativas de un mayor error, y las más bajas, de mayor
+                                    acierto.
+                                </li>
                             </ul>
                             <h2>Sistema de puntuación:</h2>
                             <p>
-                                Por la dinámica a seguir, en este juego no se consiguen puntos sino una penalización, y
-                                <strong>ganará quien obtenga la menor penalización</strong>.
-                                La penalización se calcula de la siguiente manera: <br>
-                                Penalización = Error acumulado (Distancia en KM) x Tº empleado para la prueba (en
-                                segundos) x Factor de
-                                ponderación (0.8 si se acierta si la última pregunta, 1 sino).
+                                La puntuación final se calculará a partir de la siguiente fórmula:<br>
+                                Error de localización (km) * Tº empleado (s) * pregunta final (0.8 si se acierta si la
+                                última pregunta, 1 sino).
                             </p>
                             <h2>¿Listos para empezar?</h2>
                             <p>Regístrate e introduce tu nombre de equipo</p>
