Adding flip to clues

--- a/game/index.html
+++ b/game/index.html
@@ -265,32 +265,53 @@
                         Tiempo: <span></span>
                     </div>
                 </div>
-                <div
-                   id="clueText"
-                   class="hidden"
-                ></div>
-                <div
-                   id="activeClue"
-                   class="hidden"
-                >
-                    <a
-                       href=""
-                       class="img"
-                       target="_blank"
-                    >
-                        <img>
-                    </a>
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe
-                           class="embed-responsive-item"
-                           width="1600"
-                           height="900"
-                           frameborder="0"
-                           allowfullscreen
-                        ></iframe>
-                    </div>
 
-                </div>
+                <figure class="card card-flip">
+                    <div class="card text-white back-card">
+                        <div class="card-img img-fluid"></div>
+                        <div class="card-img-overlay d-flex justify-content-center align-items-center">
+                            <h4 class="card-title">
+                                <div
+                                   id="clueText"
+                                   class="hidden"
+                                ></div>
+                            </h4>
+                        </div>
+                    </div>
+                    <div class="card text-black bg-primary">
+                        <div class="card-body d-flex justify-content-center align-items-center">
+                            <div class="card-text">
+                                <div
+                                   id="activeClue"
+                                   class="hidden"
+                                >
+                                    <a
+                                       href=""
+                                       class="img"
+                                       target="_blank"
+                                    >
+                                        <img>
+                                    </a>
+                                    <div class="iframe-container">
+                                        <iframe
+                                           class="responsive-iframe"
+                                           frameborder="0"
+                                           allowfullscreen
+                                        ></iframe>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </figure>
+                <!-- START CLUES -->
+
+
+                <!-- END CLUES-->
+
+
+
                 <div
                    id="finalForm"
                    class="hidden"
