Adding geopois.com

--- a/index.html
+++ b/index.html
@@ -1126,6 +1126,38 @@
                             </div>
                         </div>
                     </div>
+                    <div class="sponsor-grid__item">
+                        <div class="sponsor-grid__logo">
+                            <div class="sponsor-grid__logo__center">
+                                <img
+                                   src="assets/imgs/logo_geopois.png"
+                                   alt="Logo geopois"
+                                >
+                            </div>
+                        </div>
+                        <div class="sponsor-grid__expander">
+                            <div class="sponsor-grid__description">
+                                <h4>geopois.com</h4>
+                                <p>
+                                    <a href="http://geopois.com/">geopois.com</a> es una plataforma sobre
+                                    Tecnologías geoespaciales, Sistemas de Información Geográfica (GIS),
+                                    Programación y Web Mapping con una gran comunidad de especialistas geoespaciales
+                                    y una amplia variedad de tutoriales geo.
+
+                                </p>
+                                <div class="iframe">
+                                    <iframe
+                                       width="560"
+                                       height="315"
+                                       src="https://www.youtube.com/embed/CMKbEWQhnzw"
+                                       title="YouTube video player"
+                                       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                       allowfullscreen
+                                    ></iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
