Adding Colegio de geografos

--- a/index.html
+++ b/index.html
@@ -210,10 +210,14 @@
             <p class="masthead-subheading font-weight-light mb-0">
                 <!-- <em>"Los niños y niñas no juegan para aprender, aprenden porque juegan"</em>, Jean Piaget -->
                 <!-- <em>Pon a prueba tus conocimientos en geografía, compite en el concurso y descubre otros juegos</em> -->
-                <em>Más de <a
+                <em>
+                    Más de <a
                        href="#sobre-la-geonight"
                        class="yellow js-scroll-trigger"
-                    >200 eventos simultáneos</a> para disfrutar de la geografía en 40 países de 5 continentes</em>
+                    >200 eventos simultáneos</a>
+                    para disfrutar de la geografía en 40
+                    países de 5 continentes
+                </em>
             </p>
         </div>
     </header>
@@ -360,7 +364,8 @@
             <p>
                 Las/os profesionales en Geografía están capacitados/as para mucho más, como: saber cómo <a
                    href="https://es.wikipedia.org/wiki/Planificaci%C3%B3n_Territorial"
-                >ordenar el territorio</a>, combatir el cambio climático y sus consecuencias, luchar contra los riesgos
+                >ordenar el territorio</a>,
+                combatir el cambio climático y sus consecuencias, luchar contra los riesgos
                 naturales y tecnológicos,
                 <a href="https://es.wikipedia.org/wiki/Geomarketing">diseñar estrategias de geomarketing</a>, utilizar
                 herramientas
@@ -370,7 +375,8 @@
                 >análisis espacial</a>, convirtiéndoles
                 en perfectos aliados para ayudar a lograr los <a
                    href="https://www.un.org/sustainabledevelopment/es/objetivos-de-desarrollo-sostenible/"
-                >Objetivos de Desarrollo Sostenible</a>, y mucho más.
+                >Objetivos de
+                    Desarrollo Sostenible</a>, y mucho más.
 
             </p>
             <p>
@@ -832,7 +838,8 @@
                                         Nosolosig
                                     </a> es un proyecto personal de <a
                                        href="https://www.linkedin.com/in/jos%C3%A9-ignacio-s-35228957/"
-                                    >José Ignacio Sánchez</a> que ha ido evolucionando desde
+                                    >José Ignacio
+                                        Sánchez</a> que ha ido evolucionando desde
                                     una página con los marcadores o favoritos web a una revista Web independiente sobre
                                     Tecnologías de la Información Geográfica.
 
@@ -905,7 +912,8 @@
                                         GIS & BEERS
                                     </a> es el proyecto personal que <a
                                        href="https://www.linkedin.com/in/roberto-matellanes-ferreras/"
-                                    >Roberto Matellanes</a>
+                                    >Roberto
+                                        Matellanes</a>
                                     creo en 2015 y en el que además de su conocido blog
                                     podrás recursos para formarte en GIS, modelos predictivos,
                                     aplicaciones, herramientas, utilidades, etc.
@@ -1158,6 +1166,26 @@
                             </div>
                         </div>
                     </div>
+                    <div class="sponsor-grid__item">
+                        <div class="sponsor-grid__logo">
+                            <div class="sponsor-grid__logo__center">
+                                <img
+                                   src="assets/imgs/logo_colegio_geografos.png"
+                                   alt="Logo Colegio Geografos"
+                                >
+                            </div>
+                        </div>
+                        <div class="sponsor-grid__expander">
+                            <div class="sponsor-grid__description">
+                                <h4>Colegio de Geógrafos</h4>
+                                <p>
+                                    El <a href="https://www.geografos.org/">Colegio de Geógrafos de España</a> es una
+                                    asociación de carácter profesional cuya misión es defender los intereses de los
+                                    geógrafos y geógrafas profesionales y promocionar la geografía como profesión.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -1231,7 +1259,8 @@
                                     <p>Para jugar y concursar, los jugadores/as deben acceder a la <strong>hoja de
                                             inscripción (<a
                                                href="https://docs.google.com/spreadsheets/d/133QV_QVrhE5lCBv8H13miwkHr5R5sPxCXyy_C4TaOAI/edit?usp=sharing"
-                                            >aquí</a>),</strong> seleccionar el día y hora de juego que prefieren, e
+                                            >aquí</a>),</strong>
+                                        seleccionar el día y hora de juego que prefieren, e
                                         inscribirse en la sesión de juego correspondiente.</p>
                                     <p>Las sesiones <strong>se juegan de forma cooperativa en una reunión on-line y cada
                                             grupo obtiene una única puntuación conjunta</strong> con la que compite con
