Removing subscribe buttin

--- a/index.html
+++ b/index.html
@@ -267,12 +267,14 @@
                 </div>
             </div>
             <p id="contest-buttons">
-                <a
-                   href="https://docs.google.com/spreadsheets/d/133QV_QVrhE5lCBv8H13miwkHr5R5sPxCXyy_C4TaOAI/edit#gid=0"
-                   class="btn btn-primary btn-lg mr1"
+                <!-- href="https://docs.google.com/spreadsheets/d/133QV_QVrhE5lCBv8H13miwkHr5R5sPxCXyy_C4TaOAI/edit#gid=0" --></button>
+
+                <button
+                   class="btn btn-dark btn-lg mr1"
+                   disabled
                 >
-                    Inscríbete gratuítamente
-                </a>
+                    <span style="text-decoration: line-through;">Inscríbete gratuítamente</span><br>
+                </button>
                 <a
                    href="#"
                    class="btn btn-secondary btn-lg"
@@ -281,7 +283,20 @@
                 >
                     Bases del concurso
                 </a>
+
             </p>
+            <p>
+                Todas las plazas para participar están agotadas, debido al éxito de la convocatoria se está considerando
+                organizar más adelante otras sesiones de juego. Si te interesa participar puedes pre-inscribirte
+                rellenando el siguiente formulario:
+            </p>
+            <a
+               href="https://docs.google.com/forms/d/e/1FAIpQLSeX_12gVcpSLpT8x14W12cHWQpmFddlNk41fhZQoobwG4ebhw/viewform?usp=sf_link"
+               class="btn btn-primary btn-lg mr1"
+               target="_blank"
+            >
+                Pre-inscribirme a futuras ediciones
+            </a>
             <!--Aquí pondría la imagen y el link de vínculo con el concurso-->
         </div>
     </section>
