Adding abtemas and unigis

--- a/index.html
+++ b/index.html
@@ -1288,6 +1288,73 @@
                             </div>
                         </div>
                     </div>
+
+
+                    <div class="sponsor-grid__item">
+                        <div class="sponsor-grid__logo">
+                            <div class="sponsor-grid__logo__center">
+                                <img
+                                   src="assets/imgs/logo_unigis.png"
+                                   alt="Logo UNIGIS Girona"
+                                >
+                            </div>
+                        </div>
+                        <div class="sponsor-grid__expander">
+                            <div class="sponsor-grid__description">
+                                <h4>UNIGIS Girona</h4>
+                                <p>
+                                    <a href="https://www.unigis.es/">UNIGIS Girona</a> ofrece un programa online de
+                                    máster y diplomas de postgrado en SIG. UNIGIS Girona está coordinado por el Servicio
+                                    de SIG y Teledetección (SIGTE) de la Universitat de Girona y forma parte de la red
+                                    UNIGIS International Association.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="sponsor-grid__item">
+                        <div class="sponsor-grid__logo">
+                            <div class="sponsor-grid__logo__center">
+                                <img
+                                   src="assets/imgs/logo_abtemas.png"
+                                   alt="Logo Abtemas"
+                                >
+                            </div>
+                        </div>
+                        <div class="sponsor-grid__expander">
+                            <div class="sponsor-grid__description">
+                                <h4>Abtemas</h4>
+                                <p>
+                                    <a href="https://www.abtemas.es/?lang=en">abtemas</a> taller de estudios ambientales
+                                    y sociales, es un estudio de arquitectura y urbanismo que busca hacer visible lo
+                                    invisible; hacer de tus ideas una realidad.
+                                </p>
+                                <p>
+                                    Trabajamos sobre el territorio y las ciudades, te ayudamos a definir tus objetivos
+                                    de desarrollo sostenible, tu agenda urbana, tu proyecto personal.
+                                </p>
+                                <p>
+                                    Lo hacemos con la ilusión de lograr una sociedad más equitativa, solidaria,
+                                    saludable y resiliente, en la que podamos desarrollar tu proyecto; personal, social
+                                    o empresarial.
+                                </p>
+                                <p>
+                                    Entre nuestros compromisos está el de facilitar el retorno social de la tecnología,
+                                    llevando nuestra experiencia en Sistemas de Información Geográfica a las aulas,
+                                    buscamos dar respuesta a nuestra inquietud social.
+                                </p>
+                                <p>
+                                    Dedicamos una jornada semanal al geomentoring y la generación de contenidos para
+                                    ámbitos educativos, pues consideramos que estos sistemas nos permiten introducir
+                                    habilidades cognitivas de orden superior, con un enorme potencial para el diseño de
+                                    tareas integradas -productos sociales relevantes- que garantizan la “construcción”
+                                    de aprendizajes significativos para un desarrollo más equilibrado y alineado con los
+                                    ODS
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
