Adding more games

--- a/index.html
+++ b/index.html
@@ -1621,6 +1621,26 @@
                 language: 'Español',
                 type: 'Web',
                 img: 'assets/imgs/igear-geo-oca.gif'
+            },
+            {
+
+                title: 'Carmen San Diego',
+                description: 'Utiliza tus conocimientos para encontrar a Carmen Sandiego o a cualquiera de sus innumerables secuaces.',
+                url: 'https://earth.app.goo.gl/B1Avx5',
+                author: 'Google',
+                language: 'Español',
+                type: 'Web',
+                img: 'assets/imgs/carmen-san-diego.gif'
+            },
+            {
+
+                title: 'Seterra',
+                description: 'Localiza países, capitales, ciudades, ríos, lagos y mucho más en un mapa.',
+                url: 'https://www.seterra.com/es/',
+                author: 'Juegos de geografía de Seterra',
+                language: 'Español',
+                type: 'Web',
+                img: 'assets/imgs/seterra.gif'
             }
 
         ];
