Adding data removal

--- a/privacidad.html
+++ b/privacidad.html
@@ -332,6 +332,10 @@
 
         <p><br><strong>¿Puede modificarse la política de privacidad?</strong><br>Esta política de privacidad puede
             modificarse. Te recomendamos que revises la política de privacidad con cierta periodicidad</p>
+        <h2>Solicitar la eliminación de datos </h2>
+        <p>
+            Contactar con info@geovoluntarios.org
+        </p>
     </div>
 </body>
 
